Remove MAVEN_OPTS=--enable-preview requirement.